# gitserv

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING  COPYRIGHT  LICENSE  README  README.md
cmake/: findLink.cmake
libgit2/: CMakeLists.txt
meta/: config.json
src/: gitserv.h  init.cpp  main.cpp  setup.cpp
src/git/: git.cpp  git.h
www/: index.html  repolist.html
www/css/: fonts.css  index.css
